# effective-potato

./: .gitconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  deploy.sh  docker-compose-main.yml  docker-compose-optional.yml  docker-compose-prod.yml  docker-compose-services.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml
app/dockerfiles/: .dockerignore  api.Dockerfile  ui.Dockerfile
app/src/backend/: main.py  requirements.in  requirements.txt
app/src/backend/common/: configuration.py  data_model.py  logger.py
app/src/backend/etc/: .envc  config.ini
app/src/backend/exceptions/: config.py  db.py  pb.py  user.py
app/src/backend/health/: controller.py  manager.py  models.py
app/src/backend/tests/: pytest.ini
app/src/backend/tests/unit_tests/: test_health.py
app/src/frontend/: craco.config.js  package.json
app/src/frontend/public/: index.html
app/src/frontend/src/: index.js
app/src/task/: tasks.py
app/src/task/dynamic_schedule_tasks/: tasks.py
app/src/task/schedule_tasks/: tasks.py
app/src/task/subtasks_test/: tasks.py
lgtm/prometheus/: prometheus.yml
lgtm/tempo/: tempo.yml
otel/: otel-collector-config.yaml
