[project]
name = "effective-potato"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "pytest-asyncio>=0.24.0",
    "python-docx==1.1.2",
    "python-dotenv==1.0.0",
    "python-json-logger==3.2.1",
    "python-levenshtein==0.26.1",
    "python-multipart==0.0.18",
    "rich==13.6.0",
    "sqlalchemy==2.0.21",
    "uvicorn==0.23.2",
]
